objects/CEE_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Exception__c</fullName>
        <label>Error Exception</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CEE_Error_Log</label>
    <nameField>
        <displayFormat>CEEERROR-{00000000}</displayFormat>
        <label>CEE_Error_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEE_Error_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Object_Name__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Exception__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>